created a new page called About Me

--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     </button>
   </header>
 
+  <!-- Page Two Testing -->
+  <body>
+        <h1> Welcome </h1>
+        <p> hi hi </p>
+        <a href="pages/aboutme.html" target="_self">About Me</a>
+      </body>
+
   <!-- Portfolio Section -->
   <div class="w3-padding-32 w3-content" id="portfolio">
     <h2 class="w3-text-grey">My Portfolio</h2>
