Very productive day

--- a/pages/exhibitions.html
+++ b/pages/exhibitions.html
@@ -51,8 +51,9 @@ A {text-decoration: none;}
 
   <!-- Header -->
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <h1 class="w3-jumbo"><b>Page Title</b></h1>
-    <h2>lorem ipsum</h2>
+    <h1 class="w3-jumbo"><b>Exhibitions</b></h1>
+    <h2>Oh, Hi</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/SNt8syFGD6U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   </header>
   <!-- Body Description? -->
