--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<head>
+  <title>First Template</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style/style.css">
+</head>
 <style>
-body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
-.w3-row-padding img {margin-bottom: 12px}
-.bgimg {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('/w3images/profile_girl.jpg');
-    min-height: 100%;
-}
+A {text-decoration: none;}
 </style>
 <body>
 
@@ -25,15 +21,16 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </nav>
 
 <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
-<nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
-  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
+<nav class="w3-sidebar w3-white w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
+  <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-white w3-xxxlarge w3-display-topright" style="padding:0 12px;">
     <i class="fa fa-remove"></i>
   </a>
   <div class="w3-bar-block w3-center">
-    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Portfolio</a>
-    <a href="#about" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">About</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
+    <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Home</a>
+    <a href="pages/aboutme.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">About</a>
+    <a href="pages/portfolio.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Portfolio</a>
+    <a href="pages/exhibitions.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Exhibitions</a>
+    <a href="pages/contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Contact</a>
   </div>
 </nav>
 
@@ -46,39 +43,54 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <!-- Header -->
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
     <h1 class="w3-jumbo"><b>Kathreen Absuelo</b></h1>
-    <p>Visual Artist</p>
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
-    <img src="/w3images/profile_girl.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
-      <i class="fa fa-download"></i> Download Resume
-    </button>
-  </header>
+    <h2>Visual Artist</h2>
 
+<!-- <div class="design-element element-size-box user-selectable-element clickable-element has-popup video-player is-section-child" id="id1532212513594" data-element-id="id1532212513594" style="center: 50%; top: 37px; margin-center:px; 0z-index: 7;">
+<div class="element-main-box design-element-main-box user-selectable-element clickable-element has-popup video-player" data-element-id="id1532212513594" style="z-index: 7;">
+  <div class="element-background-layer element-border-target design-element-background-layer user-selectable-element clickable-element has-popup video-player" data-element-id="id1532212513594">
+  </div><div class="element-background-image design-element-background-image state-displayed image-box-new optimize-speed state-image-loaded">
+  <div class="image-box-image-wrapper horizontal-center vertical-center stretchedToFill non-tile-layout use-image-element" style="width: 960px; height: 478px;">
+    <div class="image-box-background-image" style="background-image: url(&quot;https://i.ytimg.com/vi/SNt8syFGD6U/maxresdefault.jpg&quot;);"></div><img class="image-box-image-new" src="https://i.ytimg.com/vi/SNt8syFGD6U/maxresdefault.jpg" width="960" height="720" style="width: 960px; height: 720px; margin-top: -121px; margin-left: 0px;">
+</div>
+</div>
+<div class="element-border-box element-border-target element-padding-box design-element-border-box user-selectable-element clickable-element has-popup video-player" data-element-id="id1532212513594" style="border-color: rgb(255, 255, 255); border-style: solid;">
+  <div class="element-content-box design-element-content-box user-selectable-element clickable-element has-popup video-player" data-element-id="id1532212513594">
+  <div class="content-container content-container-type element-size-box element-size-target user-selectable-element clickable-element has-popup video-player" data-element-id="id1532212513594" style="width: 960px; min-height: 477px;"><div class="video-icon-holder content-centered absolute-fill vertically-center-children state-displayed">
+    <span><span class="icon-holder block">
+      <span class="icon image-sprite-video-play-button inline-block">
+      </span></span></span>
+    </div>
+    <div class="video-player-holder absolute-fill element-content state-hidden">
+    </div></div></div></div></div></div> -->
+    </header>
+  <!-- Body Description? -->
+  <p>Seattle based Filipina artist who specializes in graphic design + photography and oil paintings - fine art work intertwined with surrealism, abstract and impressionism | Focusing creative endeavors towards architectural design + sustainability.
+  </p>
   <!-- Page Two Testing -->
   <body>
-        <h1> Welcome </h1>
-        <p> hi hi </p>
-        <a href="pages/aboutme.html" target="_self">About Me</a>
+        <!-- <h1> Welcome </h1>
+        <p> hi hi </p> -->
+        <!-- <a href="pages/aboutme.html" target="_self">About Me</a> -->
       </body>
 
   <!-- Portfolio Section -->
-  <div class="w3-padding-32 w3-content" id="portfolio">
+  <!-- <div class="w3-padding-32 w3-content" id="portfolio">
     <h2 class="w3-text-grey">My Portfolio</h2>
-    <hr class="w3-opacity">
+    <hr class="w3-opacity"> -->
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/rocks.jpg" style="width:100%">
-        <img src="/w3images/sailboat.jpg" style="width:100%">
+        <img src="w3images/wedding.jpg" style="width:100%">
+        <img src="w3images/rocks.jpg" style="width:100%">
+        <img src="w3images/sailboat.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="/w3images/underwater.jpg" style="width:100%">
-        <img src="/w3images/chef.jpg" style="width:100%">
-        <img src="/w3images/wedding.jpg" style="width:100%">
-        <img src="/w3images/p6.jpg" style="width:100%">
+        <img src="w3images/underwater.jpg" style="width:100%">
+        <img src="w3images/chef.jpg" style="width:100%">
+        <img src="w3images/wedding.jpg" style="width:100%">
+        <img src="w3images/p6.jpg" style="width:100%">
       </div>
     <!-- End photo grid -->
     </div>
@@ -86,59 +98,34 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </div>
 
   <!-- About Section -->
-  <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
+  <!-- <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about">
     <h2>About</h2>
     <hr class="w3-opacity">
-    <p>Some text about me. Some text about me. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
-      elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
+    <p></p> -->
 
   <!-- End About Section -->
   </div>
 
-  <!-- Contact Section -->
-  <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom:64px">
-    <h2>Contact Me</h2>
-    <hr class="w3-opacity">
-
-    <div class="w3-section">
-      <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Seattle, WA US</p>
-      <!-- <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p> -->
-      <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: kathreenabsuelo@gmail.com</p>
-    </div>
-
-    <!-- Image of location/map -->
-    <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin:32px 0">
-
-    <p>Lets get in touch. Send me a message:</p>
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-light-grey w3-padding-large" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
-  <!-- End Contact Section -->
-  </div>
 
   <!-- Footer -->
-  <footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-opacity w3-xlarge" style="margin:-24px">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+  <footer class="w3-container w3-padding-300 w3-none w3-center w3-opacity w3-xlarge" style="margin:0px">
+    <a href="https://www.facebook.com/kathreenabsuelo" target="_blank">
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+    </a>
+    <a href="https://www.instagram.com/kathreenabsuelo" target="_blank">
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/kathreenabsuelo"
+    </a>
     <i class="fa fa-linkedin w3-hover-opacity"></i>
     <p class="w3-medium">© Kathreen Absuelo 2019</a></p>
   <!-- End footer -->
+
   </footer>
 
 <!-- END PAGE CONTENT -->
+
+
 </div>
 
 <script>
