--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -29,19 +29,6 @@ A {text-decoration: none;}
     </div>
   </nav>
 
-  <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
-  <nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
-    <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
-      <i class="fa fa-remove"></i>
-    </a>
-    <div class="w3-bar-block w3-center">
-      <a href="../index.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
-      <a href="pages/portfolio.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Portfolio</a>
-      <a href="pages/aboutme.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">About</a>
-      <a href="pages/contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Contact</a>
-    </div>
-  </nav>
-
 
 <!-- Page Content -->
 <!-- <div class="w3-main w3-padding-large" style="margin-left:40%"> -->
@@ -53,15 +40,20 @@ A {text-decoration: none;}
   <header class="w3-container w3-center" style="padding:128px 16px" id="home">
     <h1 class="w3-jumbo"><b>Page Title</b></h1>
     <h2>lorem ipsum</h2>
+    <p>
+    <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
+    <i class="fa fa-download"></i> Download Resume
+    </p>
+    </button>
 
   </header>
   <!-- Body Description? -->
   <p>Lorem ipsum
   </p>
-  <br>
-  <br>
-  <br>
-  <br>
+<br>
+<br>
+<br>
+<br>
   <!-- Portfolio Section -->
   <!-- <div class="w3-padding-32 w3-content" id="portfolio">
     <h2 class="w3-text-grey">My Portfolio</h2>
