added new images and content

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Template</title>
+  <title>About Me</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
@@ -29,6 +29,9 @@ A {text-decoration: none;}
     </div>
   </nav>
 
+  <!-- Page Content -->
+  <div class="w3-main w3-padding-large" style="margin-left: 1.1%">
+
   <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
   <nav class="w3-sidebar w3-black w3-animate-right w3-xxlarge" style="display:none;padding-top:150px;right:0;z-index:2" id="mySidebar">
     <a href="javascript:void(0)" onclick="closeNav()" class="w3-button w3-black w3-xxxlarge w3-display-topright" style="padding:0 12px;">
@@ -50,13 +53,32 @@ A {text-decoration: none;}
   <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
 
   <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <h1 class="w3-jumbo"><b>Page Title</b></h1>
-    <h2>lorem ipsum</h2>
-
+  <header class="w3-container w3-center" style="padding:25px 16px" id="home">
+    <h2><b>About Me</b></h2>
+    <!-- <h2>lorem ipsum</h2> -->
   </header>
   <!-- Body Description? -->
-  <p>Lorem ipsum
+  <p>Hello!  My name is Kathreen Kaye Rodrigo Absuelo.  I was born September 8, 1991 in Cagayan de Oro, Philippines.  My early years was spent living in Ayala Alabang and Santa Rosa Laguna which are cities in northern Philippines, Manila.<br><br>Seattle is the place my interest in doodling as a child turned into my eternal devotion for painting and creating what appeals to my mind.  My first art exhibition took place at the 619 western building in Pioneer Square during First Thursday Artwalk in July 2011.  This was a creative space I admired for years ever since attending my first artwalk there. It was among my favorite places in Seattle to see beautiful work by international and local Seattle artists.<br><br>Today, I surround myself with positive energy, friends, family, creative and inspiring individuals who all support my pursuit to be universally recognized as an artist.  My curiousity is sparked by design + architecture, sustainability, and technology.  I enjoy spending my time with my partner, studying, practicing health + fitness, learning new perspectives, cooking and eating delicious food from around the world, traveling, and most importantly playing with our cats.
+
+<br><br>
+<h3>Charity and Volunteer Work:
+</h3>
+​​<br>
+Kathreen Relief For Marawi Refugees · Organizer
+July 2017 · Davao, Philippines.
+Kathreen Relief for Marawi crisis refugees in Davao, Philippines.
+<br><br>
+Fashion For Conservation Inspiración Del Peru Auction · Auction Donor
+May 2016 · Seattle, WA
+<br><br>
+11th Annual Girls On The Run Auction · Auction Donor
+Feb. 2016 · Seattle, WA
+<br><br>
+Capitol Hill Chamber of Commerce | The Stranger | Capitol Hill Block Party  - Official Event Photographer
+December 2014 · Seattle, WA
+<br><br>
+Washington State Prevention Summit | Spring Youth Forum · Caricature Artist, Content Creator, Event Photographer, Judge
+Nov. 2012 to May 2014 · Pacific Northwest​<br><br>
   </p>
   <br>
   <br>
