--- a/pages/exhibitions.html
+++ b/pages/exhibitions.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Template</title>
+  <title>Exhibitions</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
@@ -42,6 +42,8 @@ A {text-decoration: none;}
     </div>
   </nav>
 
+    <!-- Page Content -->
+    <div class="w3-main w3-padding-large" style="margin-left: 1.1%">
 
 <!-- Page Content -->
 <!-- <div class="w3-main w3-padding-large" style="margin-left:40%"> -->
@@ -50,14 +52,65 @@ A {text-decoration: none;}
   <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
 
   <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
-    <h1 class="w3-jumbo"><b>Exhibitions</b></h1>
-    <h2>Oh, Hi</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/SNt8syFGD6U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+  <header class="w3-container w3-center" style="padding: 20px 16px" id="home">
+    <h2><b>Exhibitions</b></h2><br><br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SNt8syFGD6U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </header>
   <!-- Body Description? -->
-  <p>Lorem ipsum
+  <p>
+<h3>Solo Exhibitions:</h3>
+<br>
+2017 August
+I C O N I C Art Exhibit + I n T h i s S k i n II, Bemis Arts, Seattle WA.
+I C O N I C Art Exhibit + I n T h i s S k i n I, Fred Wildlife Refuge, Seattle WA.
+<br>
+2016 February
+ “E N I G M A”, Solo Art Exhibition, Paradiso Gallery, Seattle WA.
+<br>
+2015 October-December
+“In Dreams” Solo Art Exhibition, Vera Project Seattle Center,  Seattle WA.
+<br>
+2011 July
+619 Western Solo Art Show Pioneer Square, Seattle WA.
+<br>
+<br>
+<h3>Selected Group Exhibitions:</h3>
+<br>
+2016 October
+“Into The Wild” Group Show, Capitol Hill Arts Walk, Seattle WA.
+<br>
+2016 September
+“The Other Enclave” Group Show, Brainfreeze (The Lusty Lady), Seattle WA.
+<br>
+2015 June
+Chocolate & Art Group Show, KGB Studios Hollywood, Los Angeles CA.
+<br>
+2011 October
+RAW Artists Hollywood, Los Angeles CA.
+<br>
+2011 September
+Daily Visuals Group Show Compton, Los Angeles CA.
+<br>
+2011 August
+Chocolate & Art Group Show, Monk Space Hollywood, Los Angeles CA.
+<br>
+<br>
+<h3>Press:</h3>
+​<br>
+2016 October
+Vanguard Seattle Art Fashion and Culture:  Art Party!  Capitol Hill Art Walk Checklist
+<br>
+2016 October
+Standard Goods Featured Artist: Kathreen Absuelo
+<br>
+2015 October
+Vera Project Present-Solo Art Exhibition: Kathreen Absuelo
+<br>
+2014
+Collective Heat Studio Featured Artist | Kathreen Absuelo "CHAKRA"
+<br>
+September 2011
+Raw Artists Hollywood, Art: Kathreen Absuelo
   </p>
   <br>
   <br>
