--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Template</title>
+  <title>Kathreen Absuelo Visual Artist</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -16,8 +16,10 @@ A {text-decoration: none;}
 <body>
 
 <!-- Sidebar with image -->
-<nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
+<a href="#" title="Portraiture of Kathreen Absuelo by Eleanor Petry">
+  <nav class="w3-sidebar w3-hide-medium w3-hide-small" style="width:40%">
   <div class="bgimg"></div>
+</a>
 </nav>
 
 <!-- Hidden Sidebar (reveals when clicked on menu icon)-->
@@ -41,7 +43,7 @@ A {text-decoration: none;}
   <span class="w3-button w3-top w3-white w3-xxlarge w3-text-grey w3-hover-text-black" style="width:auto;right:0;" onclick="openNav()"><i class="fa fa-bars"></i></span>
 
   <!-- Header -->
-  <header class="w3-container w3-center" style="padding:128px 16px" id="home">
+  <header class="w3-container w3-center" style="padding:10px 16px" id="home">
     <h1 class="w3-jumbo"><b>Kathreen Absuelo</b></h1>
     <h2>Visual Artist</h2>
 
@@ -81,16 +83,16 @@ A {text-decoration: none;}
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
       <div class="w3-half">
-        <img src="w3images/wedding.jpg" style="width:100%">
-        <img src="w3images/rocks.jpg" style="width:100%">
-        <img src="w3images/sailboat.jpg" style="width:100%">
+        <img src="images/c'est une vrai catastrophe.jpg" style="width:100%">
+        <img src="images/iconic.jpg" style="width:100%">
+        <img src="images/valencia.jpg" style="width:100%">
       </div>
 
       <div class="w3-half">
-        <img src="w3images/underwater.jpg" style="width:100%">
-        <img src="w3images/chef.jpg" style="width:100%">
-        <img src="w3images/wedding.jpg" style="width:100%">
-        <img src="w3images/p6.jpg" style="width:100%">
+        <img src="images/sean-flower.jpg" style="width:100%">
+        <img src="images/tokyo.jpg" style="width:100%">
+        <img src="images/cali.jpg" style="width:100%">
+        <!-- <img src="w3images/p6.jpg" style="width:100%"> -->
       </div>
     <!-- End photo grid -->
     </div>
