--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>First Template</title>
+  <title>Contact</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
@@ -69,8 +69,8 @@ A {text-decoration: none;}
         <a href="contact.html" class="w3-bar-item w3-button w3-text-grey w3-hover-white" onclick="closeNav()">Contact</a>
       </div>
     </nav>
-
-
+      <!-- Page Content -->
+      <div class="w3-main w3-padding-large" style="margin-left: 1.1%">
   <!-- Page Content -->
   <!-- <div class="w3-main w3-padding-large" style="margin-left:40%"> -->
 
